# time_tracking

./: .gitignore  .pre-commit-config.yaml  docker-compose.yml  justfile  pyproject.toml  requirements.txt
.docker/: docker-compose.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 22f38fe9758d_initial_migration.py  852c24e96241_fix_migration.py  899dbcae287d_initial_migration.py
app/: Dockerfile  bootstrap.py  exceptions.py  main.py
app/api/v1/endpoits/: project.py  project_user.py  time_entry.py  user.py
app/cache/: backend.py  cache.py  coder.py  decorators.py
app/core/: config.py
app/db/: session.py
app/db/models/: __init__.py  project.py  project_user.py  time_entry.py  user.py
app/db/repositories/: project.py  project_user.py  time_entry.py  user.py
app/middleware/: error_handler.py
app/schemas/: project.py  project_user.py  time_entry.py  user.py
app/services/: project.py  project_user.py  time_entry.py  user.py
tests/: conftest.py  const.py
tests/endpoints/: test_project.py
tests/integration/endpoints/: test_project_api.py
tests/test_endpoints/: test_project.py
tests/unit/repositories/: test_repositories_project.py
tests/unit/services/: test_services_project.py
